--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,31 +12,32 @@ on:
     branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-# This workflow contains a single job called "build"
-build:
-  # The type of runner that the job will run on
-  runs-on: ubuntu-latest
+- jobs:
 
-  # This grabs the WPILib docker container
-  container: wpilib/roborio-cross-ubuntu:2024-22.04
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
-  # Steps represent a sequence of tasks that will be executed as part of the job
-  steps:
-  # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-  - uses: actions/checkout@v4
+    # This grabs the WPILib docker container
+    container: wpilib/roborio-cross-ubuntu:2024-22.04
 
-  # Declares the repository safe and not under dubious ownership.
-  - name: Add repository to git safe directories
-    run: git config --global --add safe.directory $GITHUB_WORKSPACE
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v4
 
-  # Grant execute permission for gradlew
-  - name: Grant execute permission for gradlew
-    run: chmod +x gradlew
+    # Declares the repository safe and not under dubious ownership.
+    - name: Add repository to git safe directories
+      run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
-  # Runs a single command using the runners shell
-  - name: Compile and run tests on robot code
-    run: ./gradlew build
+    # Grant execute permission for gradlew
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
-spellcheck:
-  - name: Check Spelling       
-    uses: check-spelling/check-spelling@v0.0.24
+    # Runs a single command using the runners shell
+    - name: Compile and run tests on robot code
+      run: ./gradlew build
+
+  spellcheck:
+    - name: Check Spelling       
+      uses: check-spelling/check-spelling@v0.0.24
