--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,9 @@ jobs:
       run: ./gradlew build
 
   spellcheck:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Check Spelling       
       uses: check-spelling/check-spelling@v0.0.24
