added checkout to spell checker

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,5 @@ jobs:
     steps:
     - name: Check Spelling       
       uses: check-spelling/check-spelling@v0.0.24
+      with:
+        checkout: true
