only checking java files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,3 +46,4 @@ jobs:
       uses: check-spelling/check-spelling@v0.0.24
       with:
         checkout: true
+        config: .github/spelling/workflows/spelling
