added software dictionary

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,5 @@ jobs:
       with:
         checkout: true
         config: ".github/workflows/spelling"
+        extra_dictionaries: |
+          cspell:software-terms/dict/softwareTerms.txt
