download log task

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ java {
 
 def ROBOT_MAIN_CLASS = "com.team973.frc2025.Main"
 
+tasks.register("downloadLog", DownloadLog)
+
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
 deploy {
