--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,7 @@ wpi.java.configureTestTasks(test)
 // Configure string concat to always inline compile
 tasks.withType(JavaCompile) {
     options.compilerArgs.add '-XDstringConcat=inline'
+    options.compilerArgs.add '-Werror'
 }
 
 spotless {
