--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ pluginManagement {
 
 Properties props = System.getProperties();
 props.setProperty("org.gradle.internal.native.headers.unresolved.dependencies.ignore", "true");
+props.setProperty("org.gradle.warning.mode", "all");
