--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ def ROBOT_MAIN_CLASS = "com.team973.frc2025.Main"
 
 tasks.register("downloadLogs", DownloadLogs)
 tasks.register("downloadUserLog", DownloadUserLog)
+tasks.register("downloadExceptionLog", DownloadExceptionLog)
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
