testing code for score test auto

--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,13 @@ deploy {
 
                 frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
                   // Enable VisualVM connection
-                  jvmArgs.add("-Dcom.sun.management.jmxremote=true")
-                  jvmArgs.add("-Dcom.sun.management.jmxremote.port=1198")
-                  jvmArgs.add("-Dcom.sun.management.jmxremote.local.only=false")
-                  jvmArgs.add("-Dcom.sun.management.jmxremote.ssl=false")
-                  jvmArgs.add("-Dcom.sun.management.jmxremote.authenticate=false")
-                  jvmArgs.add("-Djava.rmi.server.hostname=10.9.73.2")
+                  // jvmArgs.add("-Dcom.sun.management.jmxremote=true")
+                  // jvmArgs.add("-Dcom.sun.management.jmxremote.port=1198")
+                  // jvmArgs.add("-Dcom.sun.management.jmxremote.local.only=false")
+                  // jvmArgs.add("-Dcom.sun.management.jmxremote.ssl=false")
+                  // jvmArgs.add("-Dcom.sun.management.jmxremote.authenticate=false")
+                  // jvmArgs.add("-Djava.rmi.server.hostname=10.9.73.2")
+									jvmArgs.add("-Xlog:Safepoint")
                 }
 
                 // Static files artifact
