--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ java {
 
 def ROBOT_MAIN_CLASS = "com.team973.frc2025.Main"
 
-tasks.register("downloadLogs", DownloadDogLogs)
+tasks.register("downloadDogLogs", DownloadDogLogs)
 tasks.register("downloadUserLog", DownloadUserLog)
 tasks.register("downloadExceptionLog", DownloadExceptionLog)
 
