--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
+    implementation 'org.yaml:snakeyaml:2.2'
 }
 
 test {
