fixed all errors and turned config file to one yaml content

--- a/config/robot-info-var/Config.yaml
+++ b/config/robot-info-var/Config.yaml
@@ -1,5 +1,131 @@
-ArmInfo:
-  HALL_SENSOR_ID: 1
-  ENCODER_CAN_ID: 32
-  ENCODER_OFFSET_ROTATIONS: -0.1663
-  
+ARM_INFO: {
+  ALGAE_FLOOR_POSITION_DEG: -53.0, 
+  ALGAE_HIGH_POSITION_DEG: 57.5, 
+  ALGAE_LOW_POSITION_DEG: -56.0,
+  ALGAE_STOW_POSITION_DEG: -85.0,
+  ARM_KA: 0.0,
+  ARM_KD: 0.0, 
+  ARM_KI: 0.0,
+  ARM_KP: 2.0,
+  ARM_KS: 0.0, 
+  ARM_KV: 0.0, 
+  ARM_MOTION_MAGIC_ACCELERATION: 230.0, 
+  ARM_MOTION_MAGIC_CRUISE_VELOCITY: 110.0,
+  ARM_MOTION_MAGIC_JERK: 0.0, 
+  ARM_PEAK_FORDWARD_VOLTAGE: 12.0, 
+  ARM_PEAK_REVERSE_VOLTAGE: -12.0,
+  ARM_ROTATIONS_PER_MOTOR_ROTATIONS: 0.01763668430335097, 
+  ARM_SATOR_CURRENT_LIMIT: 60.0,
+  ARM_SATOR_CURRENT_LIMIT_ENABLE: true, 
+  ARM_SUPPLY_CURRENT_LIMIT: 30.0, 
+  ARM_SUPPLY_CURRENT_LIMIT_ENABLE: true,
+  CENTER_GRAVITY_OFFSET_DEG: 3.0, 
+  CORAL_STOW_POSITION_DEG: -88.0, 
+  ENCODER_CAN_ID: 32,
+  ENCODER_OFFSET_ROTATIONS: -0.1663, 
+  FEED_FORWARD_MAX_VOLT: 0.32, 
+  HALL_SENSOR_ID: 31,
+  HORIZONTAL_POSITION_DEG: 0.0, 
+  LEVEL_FOUR_POSITION_DEG: 65.0, 
+  LEVEL_ONE_POSITION_DEG: -64.0,
+  LEVEL_THREE_POSITION_DEG: 59.0, 
+  LEVEL_TWO_POSITION_DEG: -61.0, 
+  NET_POSITION_DEG: 74.0,
+  m_algaeFloorOffset: 0.0, 
+  m_algaeHighOffset: 0.0, 
+  m_algaeLowOffset: 0.0, 
+  m_levelFourOffset: 0.0,
+  m_levelOneOffset: 0.0, 
+  m_levelThreeOffset: 0.0, 
+  m_levelTwoOffset: 0.0, 
+  m_netOffset: 0.0}
+CLAW_INFO: {
+  ALGAE_SENSOR_STRENGTH_THRESHOLD: 2500.0, 
+  CLAW_ALGAE_CAN_ID: 48, 
+  CLAW_KA: 0.0,
+  CLAW_KD: 0.0, 
+  CLAW_KI: 0.0, 
+  CLAW_KP: 0.3, 
+  CLAW_KS: 0.0, 
+  CLAW_KV: 0.11904761904761904,
+  CLAW_PEAK_FORDWARD_VOLTAGE: 12.0, 
+  CLAW_PEAK_REVERSE_VOLTAGE: -12.0, 
+  CLAW_SATOR_CURRENT_LIMIT: 60.0,
+  CLAW_SATOR_CURRENT_LIMIT_ENABLE: true, 
+  CLAW_SUPPLY_CURRENT_LIMIT: 30.0, 
+  CLAW_SUPPLY_CURRENT_LIMIT_ENABLE: true,
+  CLAW_VOLTAGE_CLOSED_LOOP_RAMP_PERIOD: 0.02, 
+  CONVEYOR_BACK_SENSOR_ID: 2, 
+  CONVEYOR_FRONT_SENSOR_ID: 3,
+  CONVEYOR_KP: 0.3, 
+  CONVEYOR_KV: 0.1, 
+  CONVEYOR_MOTOR_ID: 34, 
+  LEFT_MOTOR_ID: 35, 
+  RIGHT_MOTOR_ID: 36}
+CLIMB_INFO: {
+    CLIMB_POSITION_DEG: 263.0, HORIZONTAL_POSITION_DEG: 100.0, JOYSTICK_TO_MOTOR_ROTATIONS: 5.0,
+    MOTION_MAGIC_CRUISE_VELOCITY: 100.0, MOTOR_ROT_PER_CLIMB_ROT: 322.56000000000006,
+    STOP_POSITION_DEG: 263.0}
+DRIVE_INFO:
+      ANGLE_GEAR_RATIO: 0.08264462809917356
+      ANGLE_KD: 0.0
+      ANGLE_KF: 0.0
+      ANGLE_KI: 0.0
+      ANGLE_KP: 5.5
+      ANGLE_KV: 0.0
+      ANGLE_MOTOR_INVERT: true
+      BACK_LEFT_CONSTANTS: {
+        angleMotorID: 6, 
+        angleOffset: 50.713, 
+        cancoderID: 7, 
+        driveMotorID: 5}
+      BACK_LEFT_MODULE_DRIVE_MOTOR: 5
+      BACK_LEFT_MODULE_STEER_ENCODER: 7
+      BACK_LEFT_MODULE_STEER_MOTOR: 6
+      BACK_RIGHT_CONSTANTS: {
+        angleMotorID: 12, 
+        angleOffset: 100.107, 
+        cancoderID: 13, 
+        driveMotorID: 11}
+      BACK_RIGHT_MODULE_DRIVE_MOTOR: 11
+      BACK_RIGHT_MODULE_STEER_ENCODER: 13
+      BACK_RIGHT_MODULE_STEER_MOTOR: 12
+      CANCODER_INVERT: false
+      CLOSED_LOOP_RAMP: 0.0
+      DRIVE_GEAR_RATIO: 0.15432098765432095
+      DRIVE_KD: 0.0
+      DRIVE_KF: 0.12
+      DRIVE_KI: 0.0
+      DRIVE_KP: 0.38
+      DRIVE_MOTOR_INVERT: true
+      FRONT_LEFT_CONSTANTS: {
+        angleMotorID: 3, 
+        angleOffset: 264.902, 
+        cancoderID: 4, 
+        driveMotorID: 2}
+      FRONT_LEFT_MODULE_DRIVE_MOTOR: 2
+      FRONT_LEFT_MODULE_STEER_ENCODER: 4
+      FRONT_LEFT_MODULE_STEER_MOTOR: 3
+      FRONT_RIGHT_CONSTANTS: {
+        angleMotorID: 9, 
+        angleOffset: 153.721, 
+        cancoderID: 10, 
+        driveMotorID: 8}
+      FRONT_RIGHT_MODULE_DRIVE_MOTOR: 8
+      FRONT_RIGHT_MODULE_STEER_ENCODER: 10
+      FRONT_RIGHT_MODULE_STEER_MOTOR: 9
+      KRAKEN_TRAP_FREE_SPEED: 6000.0
+      LINEAR_METERS_PER_WHEEL_ROTATIONS: 0.319185813604723
+      MAX_ACCELERATION_METERS_PER_SECOND: 3.0
+      MAX_ANGULAR_VELOCITY_RADIANS_PER_SECOND: 13.3
+      MAX_VELOCITY_METERS_PER_SECOND: 4.925707000072884
+      OPEN_LOOP_RAMP: 0.0
+      REVERSE_TRAJECTORY_CONFIG: {}
+      STATUS_SIGNAL_FREQUENCY: 200
+      SWERVE_KINEMATICS: {}
+      TESTING_REVERSE_TRAJECTORY_CONFIG: {}
+      TESTING_TRAJECTORY_CONFIG: {}
+      TRAJECTORY_CONFIG: {}
+      WHEEL_CIRCUMFERENCE_METERS: 0.319185813604723
+      WHEEL_DIAMETER_METERS: 0.1016
+    ROBORIO_CANBUS: ''
