Refactor Config.yaml for improved structure and readability

--- a/config/robot-info-var/Config.yaml
+++ b/config/robot-info-var/Config.yaml
@@ -38,189 +38,94 @@ ARM_INFO: {
   m_levelOneOffset: 0.0, 
   m_levelThreeOffset: 0.0, 
   m_levelTwoOffset: 0.0, 
-  m_netOffset: 0.0
-}
-
-WRIST_INFO: {
-  MOTOR_CAN_ID: 31,
-  ENCODER_CAN_ID: 35,
-  ENCODER_OFFSET_ROTATIONS: 0.1904,
-  WRIST_KS: 0.0,
-  WRIST_KV: 0.0,
-  WRIST_KA: 0.0,
-  WRIST_KP: 10.0,
-  WRIST_KI: 0.0,
-  WRIST_KD: 0.0,
-  WRIST_MOTION_MAGIC_CRUISE_VELOCITY: 51.0,
-  WRIST_MOTION_MAGIC_ACCELERATION: 590.0,
-  WRIST_MOTION_MAGIC_JERK: 5900.0,
-  WRIST_ROTATIONS_PER_MOTOR_ROTATIONS: 0.023953301127214166,
-  WRIST_SATOR_CURRENT_LIMIT: 20.0,
-  WRIST_SATOR_CURRENT_LIMIT_ENABLE: true,
-  WRIST_SUPPLY_CURRENT_LIMIT: 15.0,
-  WRIST_SUPPLY_CURRENT_LIMIT_ENABLE: true,
-  WRIST_PEAK_FORDWARD_VOLTAGE: 12.0,
-  WRIST_PEAK_REVERSE_VOLTAGE: -12.0,
-  POSITIONS: {
-    ALGAE_FLOOR: -88.0,
-    ALGAE_HIGH: -149.0,
-    ALGAE_LOW: -34.0,
-    ALGAE_STOW: -5.0,
-    CORAL_STOW: -18.0,
-    WITHOUT_CORAL_STOW: -22.0,
-    WITH_CORAL_STOW: 0.0,
-    HORIZONTAL: -90.0,
-    LEVEL_ONE: 4.0,
-    LEVEL_TWO: -56.0,
-    LEVEL_THREE: -191.0,
-    LEVEL_FOUR: -198.0,
-    NET: -105.0
-  },
-  OFFSETS: {}
-}
-
-ELEVATOR_INFO: {
-  CORAL_STOW: 0.0,
-  NET: 30.0,
-  ALGAE_HIGH: 4.5,
-  ALGAE_LOW: 17.5,
-  ALGAE_FLOOR: 0.0,
-  ALGAE_STOW: 1.0,
-  ELEVATOR_MM_KS: 0.0,
-  ELEVATOR_MM_KV: 0.15,
-  ELEVATOR_MM_KA: 0.01,
-  ELEVATOR_MM_KP: 4.0,
-  ELEVATOR_MM_KI: 0.0,
-  ELEVATOR_MM_KD: 0.0,
-  ELEVATOR_V_KS: 0.0,
-  ELEVATOR_V_KV: 0.0,
-  ELEVATOR_V_KA: 0.0,
-  ELEVATOR_V_KP: 125.0,
-  ELEVATOR_V_KI: 0.0,
-  ELEVATOR_V_KD: 0.0,
-  ELEVATOR_MOTION_MAGIC_CRUISE_VELOCITY: 65.0,
-  ELEVATOR_MOTION_MAGIC_ACCELERATION: 390.0,
-  ELEVATOR_MOTION_MAGIC_JERK: 2000.0,
-  ELEVATOR_VOLTAGE_CLOSED_LOOP_RAMP_PERIOD: 0.02,
-  MOTOR_CONFIG: {
-    SATOR_CURRENT_LIMIT: 60.0,
-    SATOR_CURRENT_LIMIT_ENABLE: true,
-    SUPPLY_CURRENT_LIMIT: 40.0,
-    SUPPLY_CURRENT_LIMIT_ENABLE: true,
-    PEAK_FORDWARD_VOLTAGE: 12.0,
-    PEAK_REVERSE_VOLTAGE: -12.0
-  }
-}
-
+  m_netOffset: 0.0}
 CLAW_INFO: {
-  ALGAE_SENSOR_STRENGTH_THRESHOLD: 2500.0,
-  CLAW_ALGAE_CAN_ID: 48,
+  ALGAE_SENSOR_STRENGTH_THRESHOLD: 2500.0, 
+  CLAW_ALGAE_CAN_ID: 48, 
   CLAW_KA: 0.0,
-  CLAW_KD: 0.0,
-  CLAW_KI: 0.0,
-  CLAW_KP: 0.3,
-  CLAW_KS: 0.0,
+  CLAW_KD: 0.0, 
+  CLAW_KI: 0.0, 
+  CLAW_KP: 0.3, 
+  CLAW_KS: 0.0, 
   CLAW_KV: 0.11904761904761904,
-  MOTOR_CONFIG: {
-    SATOR_CURRENT_LIMIT: 60.0,
-    SATOR_CURRENT_LIMIT_ENABLE: true,
-    SUPPLY_CURRENT_LIMIT: 30.0,
-    SUPPLY_CURRENT_LIMIT_ENABLE: true,
-    PEAK_FORDWARD_VOLTAGE: 12.0,
-    PEAK_REVERSE_VOLTAGE: -12.0
-  },
-  CLAW_VOLTAGE_CLOSED_LOOP_RAMP_PERIOD: 0.02,
-  CONVEYOR_BACK_SENSOR_ID: 2,
+  CLAW_PEAK_FORDWARD_VOLTAGE: 12.0, 
+  CLAW_PEAK_REVERSE_VOLTAGE: -12.0, 
+  CLAW_SATOR_CURRENT_LIMIT: 60.0,
+  CLAW_SATOR_CURRENT_LIMIT_ENABLE: true, 
+  CLAW_SUPPLY_CURRENT_LIMIT: 30.0, 
+  CLAW_SUPPLY_CURRENT_LIMIT_ENABLE: true,
+  CLAW_VOLTAGE_CLOSED_LOOP_RAMP_PERIOD: 0.02, 
+  CONVEYOR_BACK_SENSOR_ID: 2, 
   CONVEYOR_FRONT_SENSOR_ID: 3,
-  CONVEYOR_KP: 0.3,
-  CONVEYOR_KV: 0.1,
-  CONVEYOR_MOTOR_ID: 34,
-  LEFT_MOTOR_ID: 35,
-  RIGHT_MOTOR_ID: 36
-}
-
+  CONVEYOR_KP: 0.3, 
+  CONVEYOR_KV: 0.1, 
+  CONVEYOR_MOTOR_ID: 34, 
+  LEFT_MOTOR_ID: 35, 
+  RIGHT_MOTOR_ID: 36}
 CLIMB_INFO: {
-  CLIMB_POSITION_DEG: 263.0,
-  HORIZONTAL_POSITION_DEG: 100.0,
-  JOYSTICK_TO_MOTOR_ROTATIONS: 5.0,
-  MOTION_MAGIC_CRUISE_VELOCITY: 100.0,
-  MOTOR_ROT_PER_CLIMB_ROT: 322.56000000000006,
-  STOP_POSITION_DEG: 263.0,
-  MOTOR_CONFIG: {
-    SATOR_CURRENT_LIMIT: 60.0,
-    SATOR_CURRENT_LIMIT_ENABLE: true,
-    SUPPLY_CURRENT_LIMIT: 40.0,
-    SUPPLY_CURRENT_LIMIT_ENABLE: true,
-    PEAK_FORDWARD_VOLTAGE: 12.0,
-    PEAK_REVERSE_VOLTAGE: 0.0
-  }
-}
-
-DRIVE_INFO: {
-  ANGLE_GEAR_RATIO: 0.08264462809917356,
-  ANGLE_KD: 0.0,
-  ANGLE_KF: 0.0,
-  ANGLE_KI: 0.0,
-  ANGLE_KP: 5.5,
-  ANGLE_KV: 0.0,
-  ANGLE_MOTOR_INVERT: true,
-  BACK_LEFT_CONSTANTS: {
-    angleMotorID: 6,
-    angleOffset: 50.713,
-    cancoderID: 7,
-    driveMotorID: 5
-  },
-  BACK_LEFT_MODULE_DRIVE_MOTOR: 5,
-  BACK_LEFT_MODULE_STEER_ENCODER: 7,
-  BACK_LEFT_MODULE_STEER_MOTOR: 6,
-  BACK_RIGHT_CONSTANTS: {
-    angleMotorID: 12,
-    angleOffset: 100.107,
-    cancoderID: 13,
-    driveMotorID: 11
-  },
-  BACK_RIGHT_MODULE_DRIVE_MOTOR: 11,
-  BACK_RIGHT_MODULE_STEER_ENCODER: 13,
-  BACK_RIGHT_MODULE_STEER_MOTOR: 12,
-  CANCODER_INVERT: false,
-  CLOSED_LOOP_RAMP: 0.0,
-  DRIVE_GEAR_RATIO: 0.15432098765432095,
-  DRIVE_KD: 0.0,
-  DRIVE_KF: 0.12,
-  DRIVE_KI: 0.0,
-  DRIVE_KP: 0.38,
-  DRIVE_MOTOR_INVERT: true,
-  FRONT_LEFT_CONSTANTS: {
-    angleMotorID: 3,
-    angleOffset: 264.902,
-    cancoderID: 4,
-    driveMotorID: 2
-  },
-  FRONT_LEFT_MODULE_DRIVE_MOTOR: 2,
-  FRONT_LEFT_MODULE_STEER_ENCODER: 4,
-  FRONT_LEFT_MODULE_STEER_MOTOR: 3,
-  FRONT_RIGHT_CONSTANTS: {
-    angleMotorID: 9,
-    angleOffset: 153.721,
-    cancoderID: 10,
-    driveMotorID: 8
-  },
-  FRONT_RIGHT_MODULE_DRIVE_MOTOR: 8,
-  FRONT_RIGHT_MODULE_STEER_ENCODER: 10,
-  FRONT_RIGHT_MODULE_STEER_MOTOR: 9,
-  KRAKEN_TRAP_FREE_SPEED: 6000.0,
-  LINEAR_METERS_PER_WHEEL_ROTATIONS: 0.319185813604723,
-  MAX_ACCELERATION_METERS_PER_SECOND: 3.0,
-  MAX_ANGULAR_VELOCITY_RADIANS_PER_SECOND: 13.3,
-  MAX_VELOCITY_METERS_PER_SECOND: 4.925707000072884,
-  OPEN_LOOP_RAMP: 0.0,
-  REVERSE_TRAJECTORY_CONFIG: {},
-  STATUS_SIGNAL_FREQUENCY: 200,
-  SWERVE_KINEMATICS: {},
-  TESTING_REVERSE_TRAJECTORY_CONFIG: {},
-  TESTING_TRAJECTORY_CONFIG: {},
-  TRAJECTORY_CONFIG: {},
-  WHEEL_CIRCUMFERENCE_METERS: 0.319185813604723,
-  WHEEL_DIAMETER_METERS: 0.1016,
-  ROBORIO_CANBUS: ''
-}
+    CLIMB_POSITION_DEG: 263.0, HORIZONTAL_POSITION_DEG: 100.0, JOYSTICK_TO_MOTOR_ROTATIONS: 5.0,
+    MOTION_MAGIC_CRUISE_VELOCITY: 100.0, MOTOR_ROT_PER_CLIMB_ROT: 322.56000000000006,
+    STOP_POSITION_DEG: 263.0}
+DRIVE_INFO:
+      ANGLE_GEAR_RATIO: 0.08264462809917356
+      ANGLE_KD: 0.0
+      ANGLE_KF: 0.0
+      ANGLE_KI: 0.0
+      ANGLE_KP: 5.5
+      ANGLE_KV: 0.0
+      ANGLE_MOTOR_INVERT: true
+      BACK_LEFT_CONSTANTS: {
+        angleMotorID: 6, 
+        angleOffset: 50.713, 
+        cancoderID: 7, 
+        driveMotorID: 5}
+      BACK_LEFT_MODULE_DRIVE_MOTOR: 5
+      BACK_LEFT_MODULE_STEER_ENCODER: 7
+      BACK_LEFT_MODULE_STEER_MOTOR: 6
+      BACK_RIGHT_CONSTANTS: {
+        angleMotorID: 12, 
+        angleOffset: 100.107, 
+        cancoderID: 13, 
+        driveMotorID: 11}
+      BACK_RIGHT_MODULE_DRIVE_MOTOR: 11
+      BACK_RIGHT_MODULE_STEER_ENCODER: 13
+      BACK_RIGHT_MODULE_STEER_MOTOR: 12
+      CANCODER_INVERT: false
+      CLOSED_LOOP_RAMP: 0.0
+      DRIVE_GEAR_RATIO: 0.15432098765432095
+      DRIVE_KD: 0.0
+      DRIVE_KF: 0.12
+      DRIVE_KI: 0.0
+      DRIVE_KP: 0.38
+      DRIVE_MOTOR_INVERT: true
+      FRONT_LEFT_CONSTANTS: {
+        angleMotorID: 3, 
+        angleOffset: 264.902, 
+        cancoderID: 4, 
+        driveMotorID: 2}
+      FRONT_LEFT_MODULE_DRIVE_MOTOR: 2
+      FRONT_LEFT_MODULE_STEER_ENCODER: 4
+      FRONT_LEFT_MODULE_STEER_MOTOR: 3
+      FRONT_RIGHT_CONSTANTS: {
+        angleMotorID: 9, 
+        angleOffset: 153.721, 
+        cancoderID: 10, 
+        driveMotorID: 8}
+      FRONT_RIGHT_MODULE_DRIVE_MOTOR: 8
+      FRONT_RIGHT_MODULE_STEER_ENCODER: 10
+      FRONT_RIGHT_MODULE_STEER_MOTOR: 9
+      KRAKEN_TRAP_FREE_SPEED: 6000.0
+      LINEAR_METERS_PER_WHEEL_ROTATIONS: 0.319185813604723
+      MAX_ACCELERATION_METERS_PER_SECOND: 3.0
+      MAX_ANGULAR_VELOCITY_RADIANS_PER_SECOND: 13.3
+      MAX_VELOCITY_METERS_PER_SECOND: 4.925707000072884
+      OPEN_LOOP_RAMP: 0.0
+      REVERSE_TRAJECTORY_CONFIG: {}
+      STATUS_SIGNAL_FREQUENCY: 200
+      SWERVE_KINEMATICS: {}
+      TESTING_REVERSE_TRAJECTORY_CONFIG: {}
+      TESTING_TRAJECTORY_CONFIG: {}
+      TRAJECTORY_CONFIG: {}
+      WHEEL_CIRCUMFERENCE_METERS: 0.319185813604723
+      WHEEL_DIAMETER_METERS: 0.1016
+    ROBORIO_CANBUS: ''
