Tested config file

--- a/src/main/deploy/Config.yaml
+++ b/src/main/deploy/Config.yaml
@@ -22,7 +22,7 @@ ARM_INFO:
   CENTER_GRAVITY_OFFSET_DEG: 3.0
   CORAL_STOW_POSITION_DEG: -88.0
   ENCODER_CAN_ID: 32
-  ENCODER_OFFSET_ROTATIONS: -0.210
+  ENCODER_OFFSET_ROTATIONS: 0.098
   FEED_FORWARD_MAX_VOLT: 0.32
   HALL_SENSOR_ID: 31
   HORIZONTAL_POSITION_DEG: 0.0
@@ -47,7 +47,6 @@ CLAW_INFO:
   CONVEYOR_KP: 0.3
   CONVEYOR_KV: 0.1
   CONVEYOR_MOTOR_ID: 34
-  LEFT_MOTOR_ID: 35
   MOTOR_CONFIG:
     PEAK_FORDWARD_VOLTAGE: 12.0
     PEAK_REVERSE_VOLTAGE: -12.0
@@ -55,7 +54,7 @@ CLAW_INFO:
     STATOR_CURRENT_LIMIT_ENABLE: true
     SUPPLY_CURRENT_LIMIT: 30.0
     SUPPLY_CURRENT_LIMIT_ENABLE: true
-  RIGHT_MOTOR_ID: 36
+  CLAW_MOTOR_ID: 36
 CLIMB_INFO: 
   CLIMB_MM_KA: 0.1
   CLIMB_MM_KD: 0.04
