updated module offsets

--- a/src/main/deploy/Config.yaml
+++ b/src/main/deploy/Config.yaml
@@ -91,6 +91,8 @@ DRIVE_INFO:
   BACK_RIGHT_MODULE_DRIVE_MOTOR: 11
   BACK_RIGHT_MODULE_STEER_ENCODER: 13
   BACK_RIGHT_MODULE_STEER_MOTOR: 12
+  BACK_LEFT_MODULE_STEER_OFFSET: 44.472
+  BACK_RIGHT_MODULE_STEER_OFFSET: 100.458
   CANCODER_INVERT: false
   CLOSED_LOOP_RAMP: 0.0
   DRIVE_GEAR_RATIO: 0.15432098765432095
@@ -105,6 +107,8 @@ DRIVE_INFO:
   FRONT_RIGHT_MODULE_DRIVE_MOTOR: 8
   FRONT_RIGHT_MODULE_STEER_ENCODER: 10
   FRONT_RIGHT_MODULE_STEER_MOTOR: 9
+  FRONT_RIGHT_MODULE_STEER_OFFSET: 152.929
+  FRONT_LEFT_MODULE_STEER_OFFSET: -95.273
   KRAKEN_TRAP_FREE_SPEED: 6000.0
   LINEAR_METERS_PER_WHEEL_ROTATIONS: 0.319185813604723
   MAX_ACCELERATION_METERS_PER_SECOND: 3.0
