--- a/build.gradle
+++ b/build.gradle
@@ -108,6 +108,7 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
+    inputs.dir('src/main/deploy')
 }
 
 // Simulation configuration (e.g. environment variables).
