DRIVE_INFO: Lazy-initialize SwerveModuleConfig
This makes it so the constructors react to loading multiple config snippets.

--- a/src/main/deploy/config-simulation.json
+++ b/src/main/deploy/config-simulation.json
@@ -1,3 +1,6 @@
+// Anything here will get used when the robot is running in simulation. These
+// values are treated as overrides --- they overwrite anything in the
+// "config-common.json" file.
 {
     "DRIVE_INFO": {
         "BACK_LEFT_MODULE_STEER_OFFSET": 0.0,
